<resources>
    <string name="app_name">Paper Trail</string>
    <string name="settings">Settings</string>
    <string name="book_started_label">Started</string>
    <string name="book_title_label">Title</string>
    <string name="book_author_label">Author</string>
    <string name="delete_book">Delete book</string>
    <string name="book_list_empty_message">You haven\'t got any active books</string>
    <string name="archive_empty_message">The books you finish will appear here</string>
    <string name="new_book">New Book</string>
    <string name="book_blurb_label">Blurb</string>
    <string name="book_length_label">Page Count</string>
    <string name="book_isbn_label">ISBN</string>
    <string name="book_image_url_label">Image Url</string>
    <string name="book_finished_label">Finished</string>
    <string name="track_new_book">Track a new book</string>
    <string name="book_progress_label">Current Progress</string>
    <string name="book">Book</string>
    <string name="cancel">CANCEL</string>
    <string name="ok">OK</string>
    <string name="save_book">Save book</string>
    <string name="title_activity_base">BaseActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="reading_list">Reading List</string>
    <string name="currently_reading">Currently Reading</string>
    <string name="archive">Archive</string>
    <string name="tag_line">Track what you\'re currently reading</string>
    <string name="book_category_label">Category</string>
    <string name="update_book">Update book</string>
    <string name="reading_list_empty_message">Queue up the books you want to read next</string>
    <string name="note">Note</string>
    <string name="Progress">Progress</string>
    <string name="notes">Notes</string>
    <string name="meta">Meta</string>
    <string name="create_note">Create Note</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="note_title">note_title</string>
    <string name="note_content">note_content</string>
    <string name="transition_book_cover">Transition Book Cover</string>
    <string name="title_activity_template">TemplateActivity</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
