<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/actions_section" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_archive"
            android:icon="@drawable/ic_archive"
            android:title="@string/archive"/>
        <item
            android:id="@+id/nav_currently_reading"
            android:icon="@drawable/ic_library"
            android:title="@string/currently_reading"/>
        <item
            android:id="@+id/nav_reading_list"
            android:icon="@drawable/ic_format_list"
            android:title="@string/reading_list"/>
    </group>
    <group android:id="@+id/settings_section" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_statistics"
            android:icon="@drawable/ic_info_black_24dp"
            android:title="@string/statistics"/>
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings"/>
    </group>
</menu>
